# Terminal-Fight-Tactics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/app/: App.h  Commands.h  Screens.h  Util.h
include/game/: GameState.h
src/: main.cpp
src/app/: App.cpp  Commands.cpp  Screens.cpp  Util.cpp
tests/: placeholder_test.cpp
